--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!Doctype html>
 <html lang="en">
-  
-友爱工作室的网站
-
+<head>
+    <meta charset="UTF-8">
+    <title>欢迎来到友爱工作室</title>
+</head>
+<body>
+<ing src="4.jpg">
